# derail-fetchit-public

./: .gitattributes  .gitignore  .gitmodules  README.md
data_recorder/: CMakeLists.txt  package.xml  setup.py
data_recorder/action/: Playback.action
data_recorder/data/: day1-1.txt  day1-2.txt  day1-3.txt  day1_drop.txt  hat_maneuver.txt  hat_maneuver2.txt  hat_reach.txt  hat_retract.txt  place_complete_bin.txt  place_complete_bin.txt.bak  place_complete_bin_inc.txt  stir.txt  stir3.txt  stir4.txt
data_recorder/scripts/: demo_recorder.py  playback_executor.py  playback_test.py
data_recorder/src/data_recorder/: backup.py  executor.py  recorder.py
fetch_grasp_suggestion/: CMakeLists.txt  README.md  package.xml
fetch_grasp_suggestion/action/: ExecuteGrasp.action  ExecuteSelectedGrasp.action  PresetJointsMove.action  PresetMove.action  SuggestGrasps.action
fetch_grasp_suggestion/config/: zones.yaml
fetch_grasp_suggestion/data/classifier/: knn.pkl  random_forest.pkl  svm.pkl
fetch_grasp_suggestion/data/grasp_preferences/: grasp_data_full_set.csv
fetch_grasp_suggestion/include/fetch_grasp_suggestion/: ScoredPose.h  bounding_box_calculator.h  cluttered_scene_demo.h  common.h  executor.h  point_cloud_manipulation.h  retriever.h  selector.h  suggester.h  test_grasp_suggestion.h
fetch_grasp_suggestion/launch/: cluttered_scene_demo.launch  cluttered_scene_demo_frontend.launch  grasp_suggestion.launch  grasp_suggestion_collector.launch  grasp_suggestion_collector_frontend.launch  grasp_suggestion_testing.launch  grasp_suggestion_testing_cage.launch  grasp_suggestion_testing_frontend.launch  grasp_suggestion_testing_offline.launch
fetch_grasp_suggestion/msg/: BoundingBox.msg  RankedGrasp.msg  RankedGraspList.msg
fetch_grasp_suggestion/rviz/: cluttered_scene_demo.rviz  grasp_suggestion_collector.rviz  test_grasp_suggestion.rviz
fetch_grasp_suggestion/scripts/: classifier_node.py  cross_validate_params.py  evaluate_classifier.py  train_classifier.py
fetch_grasp_suggestion/src/: ScoredPose.cpp  bounding_box_calculator.cpp  cluttered_scene_demo.cpp  common.cpp  executor.cpp  point_cloud_manipulation.cpp  retriever.cpp  selector.cpp  suggester.cpp  test_grasp_suggestion.cpp
fetch_grasp_suggestion/srv/: AddObject.srv  ClassifyAll.srv  ClassifyGraspPair.srv  CycleGrasps.srv  RetrieveGrasps.srv
fetchit_bin_detector/: CMakeLists.txt  README.md  package.xml
fetchit_bin_detector/calibrations/: depth_1411060937.yaml  rgb_1411060937.yaml
fetchit_bin_detector/include/fetchit_bin_detector/: BinDetector.h
fetchit_bin_detector/launch/: detector_demo.launch  launch_detector.launch
fetchit_bin_detector/src/: BinDetector.cpp  bin_detector_node.cpp
fetchit_bin_detector/srv/: GetBinPose.srv
fetchit_mapping/: CMakeLists.txt  README.md  package.xml  setup.py
fetchit_mapping/action/: Navigation.action  Reposition.action
fetchit_mapping/include/fetchit_mapping/: PointFilters.h  map_savers.h
fetchit_mapping/launch/: fetchit_build_map.launch  fetchit_localization.launch  fetchit_localization_2d.launch  fetchit_mapping.launch  fetchit_nav.launch  fetchit_navigation.launch  fetchit_octomapping.launch  filter_dynamic_obstacles.launch  generate_rail_test_map_demo.launch  get_initial_map.launch
fetchit_mapping/maps/: 2d_map.pgm  2d_map.yaml  2d_map_real.pgm  2d_map_real.yaml  3d_map.bt  3d_map.ot  3d_map_real.ot  arena_waypoints.yaml  rail_test_map.pgm  rail_test_map.yaml
fetchit_mapping/maps/local_maps/: 2d_map.pgm  2d_map.yaml  3d_map.bt
fetchit_mapping/maps/remote_maps/: 2d_map.pgm  2d_map.yaml  3d_map.bt
fetchit_mapping/scripts/: waypoint_publisher_node
fetchit_mapping/src/: PointFilters.cpp  challenge_mapping_node.cpp  go_to_goal.cpp  goal_publisher.cpp  map_savers.cpp  navigation_client.cpp  navigation_server.cpp  point_filter_node.cpp  reposition_client.cpp  reposition_server.cpp
fetchit_mapping/src/fetchit_mapping/: waypoint_map.py
manipulation_actions/: CMakeLists.txt  README.md  package.xml
manipulation_actions/action/: ApproachSchunk.action  BinDropoff.action  InHandLocalize.action  KitManip.action  LinearMove.action  SchunkDoor.action  SchunkGrasp.action  SchunkInsert.action  SchunkPullback.action  SchunkRetrieve.action  StoreObject.action
manipulation_actions/config/: zones.yaml
manipulation_actions/include/manipulation_actions/: ApproachSchunk.h  ClutteredGrasper.h  CollisionSceneManager.h  InHandLocalizer.h  KitManipulator.h  LinearController.h  Placer.h  RankedPose.h  SchunkDoor.h  SchunkGearGrasper.h  SchunkInsertion.h  SchunkInsertionController.h  ScoredPose.h
manipulation_actions/launch/: test_cluttered_grasping.launch  test_in_hand_localization.launch
manipulation_actions/msg/: ChallengeObject.msg  SchunkInsert.msg
manipulation_actions/scripts/: pick_place.py  tuck_arm.py
manipulation_actions/src/: ApproachSchunk.cpp  ClutteredGrasper.cpp  CollisionSceneManager.cpp  InHandLocalizer.cpp  KitManipulator.cpp  LinearController.cpp  Placer.cpp  SchunkDoor.cpp  SchunkGearGrasper.cpp  SchunkInsertion.cpp  SchunkInsertionController.cpp  ScoredPose.cpp  arm_approach_schunk_node.cpp  bin_dropoff_node.py
manipulation_actions/srv/: AttachArbitraryObject.srv  AttachSimpleGeometry.srv  AttachToBase.srv  DetachFromBase.srv  ToggleGripperCollisions.srv
rail_object_recognition/: CMakeLists.txt  package.xml
rail_object_recognition/data/: dataset.csv  objects_fetchit_1.csv
rail_object_recognition/include/rail_object_recognition/: ObjectRecognition.h
rail_object_recognition/launch/: recognition.launch
rail_object_recognition/msg/: Descriptor.msg
rail_object_recognition/scripts/: parts_classifier.py
rail_object_recognition/src/: ObjectRecognition.cpp
rail_object_recognition/srv/: ExtractPointCloud.srv  PartsQuery.srv
rail_segmentation_tools/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
rail_segmentation_tools/include/rail_segmentation_tools/: Merger.h  Tester.h
rail_segmentation_tools/src/: Merger.cpp  Tester.cpp
task_executor/task_executor/: CMakeLists.txt  package.xml
task_executor/task_executor/config/: data.yaml  (+5 more)
(+477 files in other folders)
