<?xml version="1.0"?>
<package>
  <name>fetch_grasp_suggestion</name>
  <version>0.0.0</version>
  <description>
    Supervised and autonomous grasp suggestion for objects based on their presently observed point cloud geometry.
  </description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rail_grasp_calculation_msgs</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rail_grasp_calculation_msgs</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>
