<?xml version="1.0"?>
<package format="2">

  <name>fetchit_bin_detector</name>
  <version>0.0.0</version>
  <description>The bin detector for fetchit challenge</description>

  <maintainer email="adaruna3@gatech.edu">Angel Daruna</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>rail_manipulation_msgs</depend>
  <depend>asr_approx_mvbb</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>gsl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>openni2_camera</exec_depend>

</package>