<?xml version="1.0"?>
<package format="2">

  <name>fetchit_mapping</name>
  <version>0.0.0</version>
  <description>The fetchit_mapping package for RAIL</description>

  <maintainer email="adaruna3@gatech.edu">Angel Daruna</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>roslib</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>rospy</depend>

  <exec_depend>fetchit_challenge</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>fetch_navigation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>