<package>
  <name>rail_segmentation_tools</name>
  <version>0.1.12</version>
  <description>Segmentation Post-Processing Functionality from the RAIL Lab</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_segmentation_tools</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rail_segmentation_tools/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rail_segmentation_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
